--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+title: 개발일지
+description: 'Now Or Never'
 url: 'http://joshgerdes.com/jekyll-uno'
 baseurl: 
 # google_analytics: 'UA-XXXXXX-X'
