--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ baseurl:
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
+  name: 'eunbi'
+  email: euunnnb@gmail.com
   twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
+  facebook_username: euunnnb
+  github_username:  eun-bi
   linkedin_username:  joshgerdes
 
 defaults:
