--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ baseurl:
 # disqus_shortname: 'your-disqus-name'
 
 # 댓글 기능을 위한 disqus 설정
-disqus_url: 'https://https-eun-bi-github-io-2.disqus.com'
-disqus_id: 'https-eun-bi-github-io-2.'
+disqus_id: 'eun-bi'
 
 # 방문자 통계를 위한 google_analytics
 google_analytics: 'UA-131268639-1'
