Jekyll을 사용한 Github 블로그 정착기 포스팅 및 페이스북 댓글 플러그인 적용

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Now Or Never
 description: '개발 일지'
-url: 'http://joshgerdes.com/jekyll-uno'
+url: 'https://eun-bi.github.io'
 baseurl:
 # disqus_shortname: 'your-disqus-name'
 
